--- a/index.html
+++ b/index.html
@@ -5,102 +5,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Personal Site</title>
+  <title>Riaznapa Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Jomolhari|Karla&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table>
-    <tr>
-      <td><img src="img/my_photo.png" alt="photo of riaz" width="120px" /></td>
-      <td>
-        <h1>Riazul Islam</h1>
-        <p>
-          <strong>App Brewery</strong>
-        </p>
-        <p>
-          I am a New web designer and learing we development.
-          I love to watch cricket.
-        </p>
-      </td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <h1>Hello I'm Riaz</h1>
+    <h2>
+      A web designer
+    </h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="mountain-img" src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile_image" src="images/my_photo.png" alt="profile_photo">
+      <h2>Hello Everyone</h2>
+      <p>After working as a professional journalist for more than
+        a decade at home and abroad I decided to enter in the world of web development.</p>
+    </div>
+    <div class="dot_line">
+    </div>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="laptop-img" src="images/computer.png" alt="skill_photo">
+        <h3>Web Design</h3>
+        <p class="web_design_clear">I have learned HTML5, CSS3, Javascript
+        and Bootstrap to work as a front end developer. I also have acquired
+        basic knowledge of PhP and MySQL to know how the back end development functions.</p>
+      </div>
+      <div class="skill-row">
+        <img class="chilli-img" src="images/chillies.png" alt="skill_row_photo">
+        <h3>UX Design</h3>
+        <p class="cooking_clear">As a web usability rater I first came to know about UX and UI.
+        Later I deepened my knowledge about user need and web usability by creating wireframes,
+        low to mid fidelity protypes, personas, scenarios etc. Then I decided to become a certified
+        UX designer. </p>
+      </div>
+    </div>
+    <div class="dot_line">
+    </div>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet.
+        Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
+  </div>
 
-  <hr />
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/riazul-islam-7b385114/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/riaznapa">Twitter</a>
+    <a class="footer-link" href="https://www.riaznapa.com/">Website</a>
+    <p>© 2018 Riazul Islam.</p>
+  </div>
 
-  <h3>Education</h3>
-  <ul>
-    <li>School </li>
-    <li>College</li>
-    <li>University</li>
-  </ul>
-
-  <hr />
-  <h3>Work Experience</h3>
-  <table cellspacing="5px">
-    <thead>
-      <tr>
-        <th>Period</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2008- 2012</td>
-        <td>Journalist in DW</td>
-      </tr>
-      <tr>
-        <td>2015-2018</td>
-        <td>Receptionist</td>
-      </tr>
-    </tbody>
-
-  </table>
-
-  <hr />
-  <hr />
-
-  <h3>Skills</h3>
-  <table cellspacing="5px">
-      <tr>
-        <td>Journalism</td>
-        <td> ⭐⭐⭐ </td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-
-  </table>
-
-  <hr />
-  <hr />
-
-  <h3><a href="hobbies.html">My Hobbies</a></h3>
-
-  <h3><a href="contackt.html">Contact Me</a></a></h3>
-
-    <h1>HTML Challenge</h1>
-    <hr />
-    <a href="https://developer.mozilla.org/en-US/docs/Learn">Link to MDN Documentation</a>
-  <table>
-    <tr>
-        <td>one</td>
-        <td>two</td>
-
-    </tr>
-    <tr>
-      <td>three</td>
-      <td>four</td>
-    </tr>
-  </table>
 </body>
-
 </html>
